# HybridRenderingEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/materials/sponza/: sponza.mtl
assets/models/nanosuit/: LICENSE.txt  nanosuit.blend  nanosuit.mtl
assets/models/sponza/: sponza.mtl
assets/models/sponza/sponza/: dummy.dds  lion_spec.dds  spnza_bricks_a_ddn.dds  sponza_arch_spec.dds  sponza_ceiling_a_diff.dds  sponza_ceiling_a_spec.dds  sponza_column_a_ddn.dds  sponza_column_a_spec.dds  sponza_column_b_ddn.dds  sponza_column_b_diff.dds  sponza_column_b_spec.dds  sponza_column_c_ddn.dds  sponza_column_c_diff.dds  sponza_column_c_spec.dds  sponza_fabric_blue_diff.dds  sponza_fabric_diff.dds  sponza_flagpole_diff.dds  sponza_flagpole_spec.dds  sponza_floor_a_diff.dds  sponza_floor_a_spec.dds  sponza_roof_diff.dds  sponza_thorn_diff.dds  sponza_thorn_spec.dds  vase_ddn.dds  vase_diff.dds  vase_hanging_diff.dds  vase_plant.dds  vase_round_spec.dds
assets/models/sponza_old/: copyright.txt  copyright_blend_dae.txt
assets/models/sponza_old/sponza/: background.dds  background_ddn.dds  background_spec.dds  chain_texture.dds  chain_texture_ddn.dds  dummy_ddn.dds  dummy_specular.dds  lion.dds  lion_ddn.dds  spnza_bricks_a_diff.dds  spnza_bricks_a_spec.dds  sponza_arch_ddn.dds  sponza_arch_diff.dds  sponza_ceiling_a_ddn.dds  sponza_column_a_diff.dds  sponza_curtain_ddn.dds  sponza_curtain_spec.dds  sponza_details_ddn.dds  sponza_details_diff.dds  sponza_details_spec.dds  sponza_fabric_ddn.dds  sponza_fabric_green_diff.dds  sponza_fabric_spec.dds  sponza_flagpole_ddn.dds  sponza_floor_a_ddn.dds  sponza_roof_ddn.dds  sponza_thorn_ddn.dds  vase_plant_spec.dds  vase_round.dds  vase_round_ddn.dds  vase_spec.dds
assets/models/sponza_pbr/: sponza_pbr.mtl
assets/scenes/: DamagedHelmet.json  default.json  nanosuit.json  pbrTest.json  sponza.json  sponza_old.json  sponza_pbr.json
assets/shaders/: PBRClusteredShader.frag  PBRClusteredShader.vert  basicShader.frag  basicShader.vert  blurShader.frag  blurShader.vert  brdfIntegralShader.frag  buildCubeMapShader.frag  clusterCullLightShader.comp  clusterShader.comp  clusteredForwardShader.frag  clusteredForwardShader.vert  convolveCubemapShader.frag  cubeMapShader.vert  cullLightsShader.comp  depthBoundShader.comp  depthPassShader.frag  depthPassShader.vert  forwardPlusShader.frag  forwardPlusShader.vert  frustrumShader.comp  gBufferShader.frag  gBufferShader.vert  lightingShader.frag  pointShadowShader.frag  pointShadowShader.geom  pointShadowShader.vert  preFilteringShader.frag  screenShader.frag  screenShader.vert  shadowShader.frag  shadowShader.vert  skyboxShader.frag  skyboxShader.vert  splitHighShader.frag  splitHighShader.vert  testShader.comp  testShader.frag
assets/shaders/ComputeShaders/: clusterCullLightShader.comp  clusterShader.comp
assets/shaders/OldShaders/: basicShader.frag  clusteredForwardShader.frag  cullLightsShader.comp  forwardPlusShader.vert  frustrumShader.comp  lightingShader.vert
assets/skyboxes/barcelona/: Barcelona_Rooftops.ibl
assets/skyboxes/barcelonaHDR/: Barce_Rooftop_C_Env.hdr
assets/skyboxes/monoLake/: monoLake.hdr
include/: camera.h  cubeMap.h  debugUtils.h  displayManager.h  engine.h  fileManager.h  frameBuffer.h  geometry.h  gpuData.h  inputManager.h  light.h  material.h  mesh.h  meshPrimitives.h  model.h  renderManager.h  scene.h  sceneManager.h  shader.h  skybox.h  texture.h
libs/: licenes.txt
libs/assimp/lib64/: assimp-vc140-mt.exp  assimp-vc140-mt.lib  assimp-vc140-mtd.exp
libs/assimp/lib64/debug/: assimp-vc140-mtd.lib
libs/glad/: glad.c  glad.h
libs/glm/: ext.hpp
libs/glm/detail/: glm.cpp  setup.hpp  type_quat.hpp  type_quat.inl  type_vec1.hpp  type_vec1.inl  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  type_vec3.inl  type_vec4.hpp  type_vec4.inl
libs/glm/ext/: matrix_relational.hpp  matrix_relational.inl  scalar_relational.hpp  scalar_relational.inl  vector_relational.hpp  vector_relational.inl
libs/glm/gtc/: noise.inl  type_precision.hpp  ulp.hpp  ulp.inl
libs/glm/gtx/: matrix_operation.hpp  matrix_operation.inl  std_based_type.hpp
libs/imgui/: imconfig.h
modules/: CMakeCache.txt  FindSDL2.cmake  Findassimp.cmake
shaders/: basicShader.frag  basicShader.vert
src/: camera.cpp  cubeMap.cpp  debugUtils.cpp  displayManager.cpp  engine.cpp  fileManager.cpp  framebuffer.cpp  geometry.cpp  inputManager.cpp  main.cpp  mesh.cpp  meshPrimitives.cpp  model.cpp  renderManager.cpp  scene.cpp  sceneManager.cpp  shader.cpp  skybox.cpp  texture.cpp
